fixing alignment on smallest mobile screen

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -108,9 +108,10 @@ div > p {
    
     div{
         font-size: 1.1rem;
+        padding: 0.3rem 1rem;
     }
     h2{
-      font-size: 1.3rem;
+      font-size: 1.2rem;
       border-bottom: 2px solid $gradient1-middle;
     }
   }
